separate df into North and South

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1086,10 +1086,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# -----------------Linear Regression-------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Isangel</td>\n",
+       "      <td>-19.55</td>\n",
+       "      <td>169.27</td>\n",
+       "      <td>72.72</td>\n",
+       "      <td>79</td>\n",
+       "      <td>100</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>VU</td>\n",
+       "      <td>1605982941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Port Alfred</td>\n",
+       "      <td>-33.59</td>\n",
+       "      <td>26.89</td>\n",
+       "      <td>77.14</td>\n",
+       "      <td>56</td>\n",
+       "      <td>60</td>\n",
+       "      <td>14.43</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1605982942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Puerto Ayora</td>\n",
+       "      <td>-0.74</td>\n",
+       "      <td>-90.35</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>73</td>\n",
+       "      <td>75</td>\n",
+       "      <td>18.34</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>1605982644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Faanui</td>\n",
+       "      <td>-16.48</td>\n",
+       "      <td>-151.75</td>\n",
+       "      <td>80.01</td>\n",
+       "      <td>72</td>\n",
+       "      <td>57</td>\n",
+       "      <td>9.48</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>1605982611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Kaitangata</td>\n",
+       "      <td>-46.28</td>\n",
+       "      <td>169.85</td>\n",
+       "      <td>48.00</td>\n",
+       "      <td>87</td>\n",
+       "      <td>99</td>\n",
+       "      <td>8.01</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1605982946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552</th>\n",
+       "      <td>Kokopo</td>\n",
+       "      <td>-4.35</td>\n",
+       "      <td>152.26</td>\n",
+       "      <td>78.64</td>\n",
+       "      <td>77</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>1605983555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>558</th>\n",
+       "      <td>Poço Verde</td>\n",
+       "      <td>-10.71</td>\n",
+       "      <td>-38.18</td>\n",
+       "      <td>87.57</td>\n",
+       "      <td>51</td>\n",
+       "      <td>100</td>\n",
+       "      <td>8.86</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1605983562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562</th>\n",
+       "      <td>Kavieng</td>\n",
+       "      <td>-2.57</td>\n",
+       "      <td>150.80</td>\n",
+       "      <td>81.97</td>\n",
+       "      <td>70</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>1605983566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>564</th>\n",
+       "      <td>Nuevo Imperial</td>\n",
+       "      <td>-13.08</td>\n",
+       "      <td>-76.32</td>\n",
+       "      <td>73.02</td>\n",
+       "      <td>57</td>\n",
+       "      <td>47</td>\n",
+       "      <td>9.44</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>1605983568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>Thohoyandou</td>\n",
+       "      <td>-22.95</td>\n",
+       "      <td>30.48</td>\n",
+       "      <td>72.88</td>\n",
+       "      <td>57</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1605983573</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>182 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               City    Lat    Long  Max Temp  Humidity  Cloudiness  \\\n",
+       "0           Isangel -19.55  169.27     72.72        79         100   \n",
+       "1       Port Alfred -33.59   26.89     77.14        56          60   \n",
+       "2      Puerto Ayora  -0.74  -90.35     77.00        73          75   \n",
+       "3            Faanui -16.48 -151.75     80.01        72          57   \n",
+       "5        Kaitangata -46.28  169.85     48.00        87          99   \n",
+       "..              ...    ...     ...       ...       ...         ...   \n",
+       "552          Kokopo  -4.35  152.26     78.64        77          84   \n",
+       "558      Poço Verde -10.71  -38.18     87.57        51         100   \n",
+       "562         Kavieng  -2.57  150.80     81.97        70         100   \n",
+       "564  Nuevo Imperial -13.08  -76.32     73.02        57          47   \n",
+       "568     Thohoyandou -22.95   30.48     72.88        57           9   \n",
+       "\n",
+       "     Wind Speed Country        Date  \n",
+       "0         11.27      VU  1605982941  \n",
+       "1         14.43      ZA  1605982942  \n",
+       "2         18.34      EC  1605982644  \n",
+       "3          9.48      PF  1605982611  \n",
+       "5          8.01      NZ  1605982946  \n",
+       "..          ...     ...         ...  \n",
+       "552        2.30      PG  1605983555  \n",
+       "558        8.86      BR  1605983562  \n",
+       "562        9.17      PG  1605983566  \n",
+       "564        9.44      PE  1605983568  \n",
+       "568        0.04      ZA  1605983573  \n",
+       "\n",
+       "[182 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create two differnet dataframes by separating original by norther and souther hemispheres\n",
+    "north_df = city_df.loc[pd.to_numeric(city_df[\"Lat\"]).astype(float)>0, :]\n",
+    "south_df = city_df.loc[pd.to_numeric(city_df[\"Lat\"]).astype(float)<0, :]\n",
+    "south_df"
+   ]
   }
  ],
  "metadata": {
